added settings menu on click in the blue div on stocks.html, more polish

--- a/index_stylesheet.css
+++ b/index_stylesheet.css
@@ -259,5 +259,18 @@
     }
 }
 
+#test_block{
+    background-color: red;
+}
 
+/* test code delete before push */
+#frame {
+    width: 100%;
+    height: 100%;
+    border: 1px solid black;
+    position:relative;
+}
 
+#queue_vanish{
+    background-color: blue;
+}
