--- a/style.css
+++ b/style.css
@@ -27,7 +27,10 @@ p {font-family: "Times New Roman"; font-size: small; text-align: center}
     margin-right: 10%;
 }
 
+
+
 .tile{
+    opacity: 0.8 ;
     margin-left: 3%;
     margin-right: 1%;
     margin-top: 1%;
@@ -37,4 +40,10 @@ p {font-family: "Times New Roman"; font-size: small; text-align: center}
     border-style: groove;
     border-top: 10px solid gray;
     box-sizing: border-box;
+}
+
+.tile:hover{
+    opacity: 1 ;
+    cursor: pointer;
+
 }
