--- a/index_stylesheet.css
+++ b/index_stylesheet.css
@@ -1,3 +1,6 @@
+body{
+    font-family: "Droid Sans";
+}
 /*side menu classes*/
 .side_menu {
     background-color: #DBD6D1;
@@ -39,6 +42,7 @@
 /*loading bar*/
 #loading_bar{
     margin: 0 auto;
+    margin-top: 10%;
     text-align: center;
     border: 20px solid #2D2824;
     border-top: #6D5782;
@@ -67,8 +71,8 @@
     width: 100%;
     height: 100%;
     padding: 0px 0px 0px 0px;
-    background-color: antiquewhite;
-    opacity: 0.9;
+    background-color: blanchedalmond;
+    opacity: 1;
     transition: 0.2s;
 }
 
@@ -79,8 +83,8 @@
     width: 100%;
     height: 100%;
     padding: 0px 0px 0px 0px;
-    background-color: antiquewhite;
-    opacity: 0.9;
+    background-color: blanchedalmond;
+    opacity: 1;
     transition: 0.2s;
 }
 
@@ -99,7 +103,10 @@
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
 }
-
+h1:hover{
+    opacity: 0.5;
+    cursor: pointer;
+}
 /*menu stuff*/
 .menu_block{
     /* below is how to center */
@@ -139,7 +146,7 @@
 
 .inner_element{
     float : left;
-    background-color: blanchedalmond;
+    background-color: antiquewhite;
     height: 10%;
     display: inline-block;
     min-width: 50%;
@@ -294,5 +301,7 @@
     border : solid darkgray 2px;
     max-width : 30%;
     max-height: 40%;
+    animation-name: fade_up_animation;
+    animation-duration: .7s
 }
 
